# linuxthemestore

./: .gitignore  Cargo.toml  LICENSE  LinuxThemeStore.flatpak  README.md  com.ScalpelSoftwares.LinuxThemesStore.json  com.github.debasishpatra1987.linuxthemestore.flatpak  com.github.debasishpatra1987.linuxthemestore.json  io.github.debasish_patra_1987.linuxthemestore.metainfo.xml  io.github.debasish_patra_1987.linuxthemestore.yml  io.github.debasishpatra1987.linuxthemestore.flatpak  io.github.debasishpatra1987.linuxthemestore.json  io.github.debasishpatra1987.linuxthemestore.metainfo.xml  io.github.debasishpatra1987.linuxthemestore.yml  meson.build  meson.build_bkp  prepare_flatpak.sh
.flatpak-builder/cache/refs/heads/x86_64-com.ScalpelSoftwares.LinuxThemesStore.json/: init
.flatpak-builder/checksums/: x86_64-com.ScalpelSoftwares.LinuxThemesStore.json
assets/: com.github.debasishpatra1987.linuxthemestore.in  io.github.debasish_patra_1987.linuxthemestore.in  io.github.debasish_patra_1987.linuxthemestore.metainfo.xml  meson.build
build-aux/: cargo.sh  com.ScalpelSoftwares.LinuxThemesStore.json  com.ScalpelSoftwares.LinuxThemesStore.json_bkp
data/: com.ScalpelSoftwares.LinuxThemesStore.desktop.in  com.github.debasishpatra1987.linuxthemestore.in  steps.txt
executable/: linuxthemesstore  linuxthemestore
flatpak/: io.github.debasish_patra_1987.linuxthemestore.json  io.github.debasish_patra_1987.linuxthemestore.metainfo.in  meson.build
src/: main.rs
