[package]
name = "linuxthemesstore"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_4", "v1_6", "v1_7"] }
async-channel = "2.3.1"
base64 = "0.22.1"
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
gtk4 = { version = "0.9.6", features = ["v4_8"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
soup = "0.5.1"
